--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -58,7 +58,7 @@
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveCategory">Save</button>
-                            <button class="btn btn-danger active" type="button" id="btnCancel">Cancel</button>
+                            <button class="btn btn-danger active" type="button" id="btnCancel">Reset</button>
                         </div>
                     </div>
                 </form>
