--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -279,7 +279,7 @@
 
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveCustomer">Save</button>
-                    <button type="reset" class="btn btn-danger active" id="btnCancel">Cancel</button>
+                    <button type="reset" class="btn btn-danger active" id="btnCancel">Reset</button>
                     
                     @*<a class="btn btn-danger active" id="btnCancel" role="button">Cancel </a>*@@*Added by vinod Mane on 22/09/2016  href="@Url.Action("Search", "Customer")"*@
                 </div> 
