--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -155,7 +155,7 @@
                                         <br />
                                         <button type="button" id="btnSearchReceivable" class="btn btn-success active">Search</button>
                                         <button type="reset" id="btnResetReceivable" class="btn btn-danger active">Reset</button>
-                                        <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
+                                        <button type="button" id="btnPay" class="btn btn-primary active" style="display:none">Pay</button>
                                         
                                     </div>
                                 </div>
