--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -37,7 +37,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-5">
+                        @*<div class="col-md-5">
 
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
@@ -45,9 +45,24 @@
                                 <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" value="@Model.Filter.Purchase_Return_Id" />
                             </div>
 
+                        </div>*@
+
+                        <div class="col-md-4">
+                            
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textDebitNoteNo" placeholder="Enter Debit note no to search" value="" data-table="Purchase_Return" data-col=" Purchase_Return_Id,Debit_Note_No" data-headernames="Purchase Return">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnDebitNoteNo" name="Filter.Debit_Note_No" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" class="auto-complete-label" />
+
+                                </div>
+                            </div>
+
                         </div>
 
-                        <div class="col-md-7" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-8" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
