Changes in Sales Invoice related calculations and validations.

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -466,7 +466,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Total Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Net_Amount" id="textTotalAmount" value="@Model.SalesInvoice.Net_Amount" placeholder="Total Amount" maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Net_Amount" id="textTotalAmount" value="@(Model.SalesInvoice.Net_Amount == 0 ? "" : Model.SalesInvoice.Net_Amount.ToString())" placeholder="Total Amount" maxlength="10" />
 
                                         <input type="hidden" id="hdnSales_Invoice_Id" name="SalesInvoice.Sales_Invoice_Id" value="@Model.SalesInvoice.Sales_Invoice_Id">
                                         <input type="hidden" id="hdnReceivable_Item_Id" name="SalesInvoice.Receivable_Item_Id" value="@Model.SalesInvoice.Receivable_Item_Id">
@@ -497,7 +497,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Cash Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Cash_Amount" id="txtCash_amount" value="@Model.SalesInvoice.Cash_Amount" placeholder="Cash Amount" @*onchange="javascript: CalculatePaidAmt();"*@ maxlength="10"/>
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Cash_Amount" id="txtCash_amount" value="@(Model.SalesInvoice.Cash_Amount == 0 ? "" : Model.SalesInvoice.Cash_Amount.ToString())" placeholder="Cash Amount" @*onchange="javascript: CalculatePaidAmt();"*@ maxlength="10"/>
                                     </div>
                                 </div>
 
@@ -520,7 +520,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Cheque_Amount" id="txtCheque_Amount" value="@Model.SalesInvoice.Cheque_Amount" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder="Enter Cheque Amount " maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Cheque_Amount" id="txtCheque_Amount" value="@(Model.SalesInvoice.Cheque_Amount == 0 ? "" : Model.SalesInvoice.Cheque_Amount.ToString())" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder="Enter Cheque Amount " maxlength="10" />
                                     </div>
                                 </div>
 
@@ -575,7 +575,7 @@
                                 <div id="divPaidAmount" class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Credit_Note_Amount" id="txtCredit_Note_Amount" value="@Model.SalesInvoice.Credit_Note_Amount" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder=" Enter Paid amount" maxlength="20" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Credit_Note_Amount" id="txtCredit_Note_Amount" value="@(Model.SalesInvoice.Credit_Note_Amount == 0 ? "" : Model.SalesInvoice.Credit_Note_Amount.ToString())" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder=" Enter Paid amount" maxlength="20" />
                                     </div>
                                 </div>
 
@@ -610,7 +610,7 @@
                                 <div id="divCreditcardno" class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Card Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Card_Amount" id="txtCard_Amount" value="@Model.SalesInvoice.Card_Amount" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder="Card Amount" maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Card_Amount" id="txtCard_Amount" value="@(Model.SalesInvoice.Card_Amount == 0 ? "" : Model.SalesInvoice.Card_Amount.ToString())" @*onchange="javascript: CalculatePaidAmt();"*@ placeholder="Card Amount" maxlength="10" />
                                     </div>
                                 </div>
 
@@ -651,7 +651,7 @@
                                 <div id="divDebitcardno" class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Gift Voucher Amount </span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" @*onblur="javascript: CalculatePaidAmt();"*@ value="@Model.SalesInvoice.Gift_Voucher_Amount" placeholder="Enter Gift Voucher Amount" maxlength="20" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" @*onblur="javascript: CalculatePaidAmt();"*@ value="@(Model.SalesInvoice.Gift_Voucher_Amount == 0 ? "" : Model.SalesInvoice.Gift_Voucher_Amount.ToString())" placeholder="Enter Gift Voucher Amount" maxlength="20" />
                                     </div>
                                 </div>
 
@@ -668,14 +668,14 @@
                                 <div id="divDebitcardno" class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Paid Amount </span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Paid_Amount" id="txtPaid_Amount" onchange="javascript: CalculateBalAmt();" value="@Model.SalesInvoice.Paid_Amount" placeholder="Paid Amount" maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Paid_Amount" id="txtPaid_Amount" onchange="javascript: CalculateBalAmt();" value="@(Model.SalesInvoice.Paid_Amount == 0 ? "" : Model.SalesInvoice.Paid_Amount.ToString())" placeholder="Paid Amount" maxlength="10" />
                                     </div>
                                 </div>
 
                                 <div id="divCreditcardno" class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Balance Amount</span>
-                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Balance_Amount" id="txtBalance_Amount" value="@Model.SalesInvoice.Balance_Amount" placeholder="Balance Amount" maxlength="10" />
+                                        <input type="text" class="form-control input-sm" name="SalesInvoice.Balance_Amount" id="txtBalance_Amount" value="@(Model.SalesInvoice.Balance_Amount == 0 ? "" : Model.SalesInvoice.Balance_Amount.ToString())" placeholder="Balance Amount" maxlength="10" />
                                     </div>
                                 </div>
 
