--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
@@ -31,6 +31,9 @@
             </h4>
 
         </div>
+
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "Employee")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+
     </div>
 
 
