bug fix in Branch, Role, Employee branch mgmt

--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="btn-group">
                     <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                    <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "Employee")'">Reset</button>
+                    <button type="reset" class="btn btn-danger active">Reset</button>
                 </div>
             </div>
         </div>
