--- a/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
@@ -67,7 +67,7 @@
                 @* LookUp Code Added by Vinod Mane on 27/09/2016*@
                 <div class="form-group auto-complete" >
                     <div class="input-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand name.</span>
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Role name.</span>
                     </div>
                     <div class="input-group">
                         <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Role" id="txtRoleName" placeholder="Enter role to search." data-table="Role" data-col="Role_Id,Role_Name" data-headernames="Role Name">
