Brand,Category,Size(reset functionality),Employee(Active-inactive Functionality),Gift Voucher(Search Functionality)

--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -5,10 +5,12 @@
     ViewBag.Title = "Search";
 }
 
+
 <script src="/Scripts/Modules/common_methods.js"></script>
+
 <script src="~/Scripts/Modules/Employee/search_employee_event.js"></script>
 <script src="~/Scripts/Modules/Employee/search_employee_method.js"></script>
-
+<script src="~/Scripts/Modules/Employee/employee_events.js"></script>
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
