--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -5,7 +5,7 @@
 <script src="~/Content/Atlant/js/plugins/maskedinput/jquery.maskedinput.min.js"></script>
 <script src="~/Scripts/Modules/Employee/employee_validation.js"></script>
 <script src="~/Scripts/Modules/Employee/employee_events.js"></script>
-<script src="~/Scripts/Modules/Employee/employee_methods.js"></script>
+@*<script src="~/Scripts/Modules/Employee/employee_methods.js"></script>*@
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -92,11 +92,11 @@
                            <label class="switch">
                                @if (Model.Employee.IsActive == true)
                                {
-                                <input value="@Model.Employee.IsActive" name="Employee.IsActive" type="checkbox" id="Flag">
+                                <input value="True" name="Employee.IsActive" checked="checked" type="checkbox" id="Flag">
                                }
                                else
                                {
-                                <input value="@Model.Employee.IsActive" name="Employee.IsActive" checked="checked" type="checkbox" id="Flag">
+                                <input value="False" name="Employee.IsActive"  type="checkbox" id="Flag">
                                }
                                @*<input checked="" id="Flag" value="0" type="checkbox">*@
                                <span></span>
