--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -81,7 +81,7 @@
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveSizeGroup">Save</button>
                             @*<button type="button" class="btn btn-default" id="abc">Default</button>*@
-                            <button type ="reset" class="btn btn-danger active">Reset</button>
+                            <button type="reset" class="btn btn-danger active" id="btnResetSizeGroup">Reset</button>
                         </div>
                     </div>
 
