--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/_ChangeBranch.cshtml
@@ -68,17 +68,16 @@
 
         </div>
 
-
-        <div class="row">
-            
-                <div class="modal-footer">
+        @*commented by vinod mane on 24/10/2016*@
+        @*<div class="row">            
+                <div class="panel-heading">
                     <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
                     </div>
                 </div>
          
-        </div>
-       
+        </div>*@
+       @*End*@
     </form>
 
 
