--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -88,11 +88,23 @@
                     </div>
                 </div>
 
-                <div class="panel-footer text-center">
+                @*commented by vinod mane on 24/10/2016*@
+                @*<div class="panel-footer text-center">
                     <div class="btn-group">
                     </div>
-                </div>
+                </div>*@
+                @*End*@
 
+                @*Added by vinod mane on 24/10/2016*@
+                <div class="row">
+                    <div class="panel-heading">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
+                        </div>
+                    </div>
+
+                </div>
+                @*End*@
             </div>
 
             @* End *@
