--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter category code." name="Category.Category_Code" /> 
+                        <input type="text" class="form-control" placeholder="Enter category code." name="Category.Category_Code" maxlength="5" /> 
                     </div> 
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
