--- a/MyLeoRetailer/Views/PostLogin/Master/Category/_SubCategory.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/_SubCategory.cshtml
@@ -17,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Enter sub category code." name="SubCategory.Sub_Category_Code" /> 
+            <input type="text" class="form-control" placeholder="Enter sub category code." name="SubCategory.Sub_Category_Code" maxlength="5" /> 
         </div>
 
         <div class="form-group" style="margin-bottom: 5px; float: right;">
